# embassy-rp-template

./: Cargo.toml  cargo-generate.toml  rust-toolchain.toml
.cargo/: config.toml
